Se modifica el programa para obtener la información de los productos por medio de fetch

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <main class="container">
         <h1>Promesas</h1>
 
-        <!-- <div class="card-group"> -->
-          <div id="cardTxt">
+      
+        <div class="row row-cols-1 row-cols-md-3 g-4" id="cardTxt" >
+          <div class="col" >
           </div>
-        <!-- </div> -->
+        </div>
 
     </main>
     <script src="./js/main.js"></script>
